@@ -14,6 +14,7 @@
  - fixed bug for truncated text (goffy)
  - added field prefix again (goffy)
  - fixed bug in block links (goffy)
+ - fixed bug with short text in block (goffy)
 
 <h5>3.7.0 Alpha   [2023-07-06]</h5>  Dev: XOOPS 2.5.11 RC2, PHP 8.0
  - implemented smarty 3 (zivXP/goffy)
